tests/palaiologos/fail/integer_bounds/2^31/sto_both.asm
sto 80000000h, 80000000h
